# virtual-encoder

./: .gitignore  README.md  api.md  main.py  pyproject.toml  requirements.txt
common/: .gitignore  pyproject.toml
common/boot-counter/: boot-counter.service  boot-counter.sh  install.sh
common/chrony/: chrony.conf  chronyd  install.sh
common/ensaio/: __init__.py
common/picam_gc/: picam_gc.py  picam_gc.service
extra/: before-shutdown.service  before-virtual-encoder.service  before_main.py  before_shutdown.py  default_config.toml  install.sh  virtual-encoder.service
post_processing/: 2d_animated_post_processing.py  config_interface.py  csv_reader.py  image_enhancer.py  main.py  main_automated.py  main_ui.py  menu_interface.py  multithreading_post_processing.py  post_processing_graphics.py  pyproject.toml  simple_displacement.py  simple_post_processing.py  simple_processing.py  single_shot.py  trajectory.npz  ui_processing.py  ui_processing_vpython.py
post_processing/post_processing/processing/: displacement_processor.py
post_processing/post_processing/tools/: plot_2d.py  plot_3d.py
post_processing/post_processing/ui/: config_interface.py  menu_interface.py
post_processing/post_processing/utils/: file_tools.py  img_tools.py
post_processing/processing/: displacement_processor.py  manual_displacement.py  refine_point.py
post_processing/refactor/: animation.py  config.py  imu_tools.py  main.py  npz_tools.py  plot_2d.py  plot_2d_from_npz.py  plot_3d.py  plot_3d_from_npz.py  plot_3d_from_npz_multiplot_newmethod.py  plot_3d_from_npz_slow_rot.py  plot_cube_from_npz.py  process_displacements_to_npz.py
post_processing/tools/: gpu_tools.py  plot_2d.py  plot_3d.py  subimage_generator.py  video_overlay.py
post_processing/ui/: config_interface.py  menu_interface.py
post_processing/utils/: file_tools.py  img_tools.py  imu_tools.py
rpi0/: main.py  main_calibration.py  old_server.py  pyproject.toml  virtual-encoder.service
rpi5/: FocusScoreCalculator.py  before-virtual-encoder.service  before_main.py  before_shutdown.py  display.py  enable_watchdog.sh  gpiod_button.py  ihm.py  install.sh  main.py  modos.py  pi_zero_client.py  pulse_generator.py  pyproject.toml  score_calculator.py  server.py  virtual-encoder.service
rpi5/boot-counter/: boot-counter.service
rpi5/estados/: __init__.py  ativado.py  calibracao.py  estados.py
rpi5/picam_gc/: picam_gc.service
rpi5/preprocessing/: fft.py  grayscale.py  window.py
rpi5/src/: acquisition_writer.py  download.py  dsp.py  encoder_gs.py  log.py  logger.py  mount_device_manager.py  network_manager.py  pi_zero_api.py  pi_zero_client.py  pi_zero_power_supply.py  relay.py  source_controller.py  status.py
rpi5/src/estados/: __init__.py  ativado.py  calibracao.py  estados.py  odometro.py
rpi5/src/hal/: camera.py  display.py  encoder.py  imu.py  network_interface.py  relay.py  thermal_sensors.py
rpi5/src/ihm/: display.py  download.py  ihm.py  server.py  usb_manager.py
rpi5/src/log/: imu_logger.py
rpi5/src/modos/: __init__.py  modo_autonomo.py  modo_download.py  modo_odometro.py  modo_tempo.py  modo_transferencia.py
rpi5/src/webui/: server.py
rpi5/src/webui/public/: index.html  main.js  style.css
rpi5/src/webui/src/: controls.js  encoder_api.js  main.js  style.css
rpi5/src/webui/src/canvas/: imu.js
rpi5/src/webui/src/modal/: desligar.js  download.js  modos.js  reiniciar.js
rpiZero/: local_pizeroclient.py  main.py  main_calibration.py  old_server.py  server.py  test-bno.py  virtual-encoder.service
tests/: bno055-i2c.py  camera_calib.py  distortion_calibration_map.npz  (+2 more)
(+82 files in other folders)
