[project]
name = "virtual-encoder"
version = "0.1.0"
description = "Virtual Encoder running on a RPi5"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "opencv-python",
    "requests",

    # add with pip -e $VISUAL_ODOMETER_DIR
    # "visual-odometer"
]

[tool.setuptools.packages.find]
include = ["virtual_encoder"]
