[project]
name = "virtual-encoder"
version = "0.1.0"
description = "Virtual Encoder running on a RPi5"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "flask-cors>=6.0.2",
    "opencv-python",
    "requests",
    # add with pip -e $VISUAL_ODOMETER_DIR
    # "visual-odometer"
]

[tool.setuptools.packages.find]
include = [
    "virtual_encoder",
    "virtual_encoder.hal"
]

[project.optional-dependencies]
raspberry = [
    "gpiod",
    "picamera2",
    "adafruit-circuitpython-bno055",
    "adafruit-circuitpython-ssd1306",
]
