[project]
name = "common"
version = "0.1.0"
description = "Common files for the Virtual Encoder"
requires-python = ">=3.11"
dependencies = [
  "numpy~=1.26.4",
  "opencv-python",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [ "ensaio" ]
