[project]
name = "post-processing"
version = "1.0.0"
description = "Post processing toolbox for the Virtual Encoder"
requires-python = ">=3.13"
dependencies = [
  "common",
  "matplotlib>=3.10.7",
  "numpy",
  "opencv-python>=4.11.0.86",
  "visual-odometer",
]

[tool.uv.sources]
visual-odometer = { path = "../../visual-odometer", editable = true }
common = { path = "../common", editable = true }

